# sra-back

./: .dockerignore  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  appspec.yml  docker-compose-prod.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  tsconfig.json
.aws/: task-definition.json
.github/workflows/: aws.yml
app/: config.py  database.py  log_config.py  main.py
app/api/: endpoints.py
app/api/dependencies/: auth.py  auth_wrapper.py  repository.py  services.py  session.py  user.py
app/api/docs/: auth.py  base.py  companies.py  quizzes.py  tags.py  (+1 more)
app/attempts/: models.py
app/auth/: handlers.py
app/companies/: models.py
app/core/: database.py  tasks.py
app/models/: __init__.py  database.py
app/quizzes/: models.py
app/repository/: attempt.py  base.py  company.py  database.py  question.py  quiz.py  tag.py  user.py
app/services/: attempt.py  base.py  company.py  question.py  quiz.py  tag.py  user.py
app/users/: models.py
migrations/: env.py
migrations/versions/: 000728f81c69_initial_migration.py  1683f50bbfc1_alter_tag_model.py  2898c066a68f_alter_attempt_result_type.py  400080146f02_add_company_model.py  533a799aee1a_add_user_phone_number.py  763809db8dd7_add_tag_models.py  7700e2b0d730_removed_picture_field_from_the_answer_.py  9a1378fad2d1_add_attempt_model.py  cfc5bb97cb2b_add_max_attempts_count_field.py  de7fd78da905_add_user_model.py  e8c0d95eb517_split_up_quiz_deadlines_into_separate_.py  ea3fc145f654_alter_tag_model_unique_constraint.py  eaa965dff310_add_quiz_models.py
scripts/: start.sh
(+36 files in other folders)
